# immutable

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  tox.ini
immutable/: __init__.py  checktype.py  decorator.py  deep.py  exceptions.py  extraproxies.py  immutable.py  proxy.py  register.py  superpatch.py
tests/: .coveragerc  async_test.py  decorator_test.py  deep_builtin_test.py  deep_test.py  immutable_test.py  other_test.py  proxy_dunder_test.py  proxy_test.py  super_test.py
